--- a/other/vignet_creation/create_xmm_vinget_sixte.ipynb
+++ b/other/vignet_creation/create_xmm_vinget_sixte.ipynb
@@ -81,9 +81,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
-   "metadata": {},
-   "outputs": [],
+   "execution_count": 1,
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2023-09-12T10:17:33.622348282Z",
+     "start_time": "2023-09-12T10:17:33.521719113Z"
+    }
+   },
+   "outputs": [
+    {
+     "ename": "NameError",
+     "evalue": "name 'np' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001B[0;31m---------------------------------------------------------------------------\u001B[0m",
+      "\u001B[0;31mNameError\u001B[0m                                 Traceback (most recent call last)",
+      "Cell \u001B[0;32mIn[1], line 2\u001B[0m\n\u001B[1;32m      1\u001B[0m \u001B[38;5;66;03m# Create the vignet array\u001B[39;00m\n\u001B[0;32m----> 2\u001B[0m vignet \u001B[38;5;241m=\u001B[39m \u001B[43mnp\u001B[49m\u001B[38;5;241m.\u001B[39mzeros((\u001B[38;5;241m1\u001B[39m,theta\u001B[38;5;241m.\u001B[39mshape[\u001B[38;5;241m1\u001B[39m]\u001B[38;5;241m-\u001B[39m\u001B[38;5;241m1\u001B[39m,energy_lo\u001B[38;5;241m.\u001B[39mshape[\u001B[38;5;241m1\u001B[39m])) \u001B[38;5;66;03m# , dtype=[('VIGNET', '>f4')]\u001B[39;00m\n\u001B[1;32m      4\u001B[0m ccf_vignet_data \u001B[38;5;241m=\u001B[39m hdu[\u001B[38;5;124m'\u001B[39m\u001B[38;5;124mVIGNETTING\u001B[39m\u001B[38;5;124m'\u001B[39m]\u001B[38;5;241m.\u001B[39mdata[\u001B[38;5;124m'\u001B[39m\u001B[38;5;124mVIGNETTING_FACTOR\u001B[39m\u001B[38;5;124m'\u001B[39m]\n\u001B[1;32m      6\u001B[0m \u001B[38;5;28;01mfor\u001B[39;00m i \u001B[38;5;129;01min\u001B[39;00m \u001B[38;5;28mrange\u001B[39m(ccf_vignet_data\u001B[38;5;241m.\u001B[39mshape[\u001B[38;5;241m0\u001B[39m]\u001B[38;5;241m-\u001B[39m\u001B[38;5;241m1\u001B[39m):\n\u001B[1;32m      7\u001B[0m     \u001B[38;5;66;03m# i indexes the theta variable\u001B[39;00m\n\u001B[1;32m      8\u001B[0m     \u001B[38;5;66;03m# print(ccf_vignet_data[i][0])\u001B[39;00m\n",
+      "\u001B[0;31mNameError\u001B[0m: name 'np' is not defined"
+     ]
+    }
+   ],
    "source": [
     "\n",
     "\n",
@@ -447,9 +464,9 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3.8.5 64-bit ('usr')",
+   "name": "python3",
    "language": "python",
-   "name": "python385jvsc74a57bd0767d51c1340bd893661ea55ea3124f6de3c7a262a8b4abca0554b478b1e2ff90"
+   "display_name": "Python 3 (ipykernel)"
   },
   "language_info": {
    "codemirror_mode": {
